Jar fix (#17)
* chore: refactor to preferred proj structure

* chore: refactor to Makefile instead of pom.xml config

* chore: added Inno installers

* chore: dir cleanup

* fix: PantryPanel imports

* chore: bundle sql files